flux/test/authpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
 name: allow
 namespace: test
spec:
  rules:
  - from:
    - source:
        ipBlocks:
        - "50.4.72.65"
