flux/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/waypoint-for: all
    istio.io/use-waypoint: shared-waypoint
    istio.io/use-waypoint-namespace: istio-system
